tests/build/cases/widget_new/malformed_property_path2.stderr
error: expected `=`
 --> cases/widget_new/malformed_property_path2.rs:5:15
  |
5 |         margin! = 0;
  |               ^

warning: unused import: `properties::margin`
 --> cases/widget_new/malformed_property_path2.rs:1:15
  |
1 | use zero_ui::{properties::margin, widgets::blank};
  |               ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
